--- a/zjwl/index.html
+++ b/zjwl/index.html
@@ -44,7 +44,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="banner-top">
 								<ul class="nav banner-nav">                                     
 										<li><a class="active" href="index.html">主页</a></li>
-										<li class="dropdown1"><a href="domain.html">公司简介</a>
 										<li class="dropdown1"><a class="down-scroll" href="">基础建设</a>
 											<ul class="dropdown2">
 												<li><a href="sharedhosting.html">网络组建</a></li>
@@ -122,7 +121,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 			<div class="col-md-4 one_third pricing">
 				<div class="pricing_top">
-					<h6>方案撰写</h6>
+					<h6>方案</h6>
+					<p>撰写</p>
 				</div>
 				<div class="pricing_middle">
 					<ul>
@@ -133,13 +133,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</ul>
 				</div>
 				<div class="pricing_bottom">
-					<a href="#">Order</a>
+					<a href="#">详细</a>
 				</div>
 			</div>
 
 			<div class="col-md-4 one_third pricing">
 				<div class="pricing_top">
-					<h6>方案实施</h6>
+					<h6>方案</h6>
+					<p>实施</p>
 				</div>
 				<div class="pricing_middle">
 					<ul>
@@ -150,13 +151,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</ul>
 				</div>
 				<div class="pricing_bottom">
-					<a href="#">Order</a>
+					<a href="#">详细</a>
 				</div>
 			</div>
 
 			<div class="col-md-4 one_third last pricing">
 				<div class="pricing_top">
-					<h6>技术服务</h6>
+					<h6>技术</h6>
+					<p>服务</p>
 				</div>
 				<div class="pricing_middle">
 					<ul>
@@ -167,7 +169,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</ul>
 				</div>
 				<div class="pricing_bottom">
-					<a href="#">Order</a>
+					<a href="#">详细</a>
 				</div>
 			</div>
 
@@ -176,110 +178,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 	<div class="fullwidth-section semi-background">
-                        <div class="fullwidth-bg">	  
-                            <div class="overlay left-aligned">
-                            	<div class="dt-sc-one-half column first">
-                                	<div class="dt-support">
-                                        <h2><span>您的网网络您说了算</span></h2>
-                                        <p>当前环境下，您是您网络的主人，但是真的是这样的吗，网络中的病毒、攻击、非法篡改、数据泄密等等，这些您都知道吗，有了我们的支持，您的网就是您的网，您的网您说了算.</p>
-                                        <span>(855) 503-0450</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>   
-<div class="service-section" id="service">
-				<div class="container">
-					<div class="service-section-head text-center wow fadeInRight" data-wow-delay="0.4s">
-						<h3>拥抱现在 守护未来</h3>
-						<p>当您网络系统出现问题了，您当然会想到我们，但是为什么不在问题发生前就想到呢，防患于未然，古人尚且知道这个道理，只是为了现在吗，不，是守护未来</p>
-					</div>
-					<div class="service-section-grids">
-						<div class="col-md-6 service-grid">
-							<div class="service-section-grid wow bounceIn" data-wow-delay="0.4s">
-								<div class="icon">
-									<i class="s1"></i>
-								</div>
-								<div class="icon-text">
-									<h4>网络基础建设方案</h4>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-							<div class="service-section-grid wow bounceIn" data-wow-delay="0.4s">
-								<div class="icon">
-									<i class="s2"></i>
-								</div>
-								<div class="icon-text">
-									<h4>应用系统建设方案</h4>
-									<p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy</p>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-							<div class="service-section-grid wow bounceIn" data-wow-delay="0.4s">
-								<div class="icon">
-									<i class="s3"></i>
-								</div>
-								<div class="icon-text">
-									<h4>私有云建设方案</h4>
-									<p>Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham</p>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-						</div>
-						<div class="col-md-6 service-grid">
-							<div class="service-section-grid wow bounceIn" data-wow-delay="0.4s">
-								<div class="icon">
-									<i class="s4"></i>
-								</div>
-								<div class="icon-text">
-									<h4>网络安全解决方案</h4>
-									<p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy</p>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-							<div class="service-section-grid wow bounceIn" data-wow-delay="0.4s">
-								<div class="icon">
-									<i class="s5"></i>
-								</div>
-								<div class="icon-text">
-									<h4>数据安全解决方案</h4>
-									<p>There are many variations of passages of Lorem Ipsum available, suffered alteration in some form, by injected humouror randomised words which don't look even slightly believable.</p>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-							<div class="service-section-grid wow bounceIn" data-wow-delay="0.4s">
-								<div class="icon">
-									<i class="s6"></i>
-								</div>
-								<div class="icon-text">
-									<h4>无线网建设方案</h4>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer.</p>
-								</div>
-								<div class="clearfix"></div>
-							</div>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-				</div>
-			</div>
+        <div class="fullwidth-bg">	  
+            <div class="overlay left-aligned">
+            	<div class="dt-sc-one-half column first">
+                	<div class="dt-support">
+                        <h2><span>您的网网络您说了算</span></h2>
+                        <p>当前环境下，您是您网络的主人，但是真的是这样的吗，网络中的病毒、攻击、非法篡改、数据泄密等等，这些您都知道吗，有了我们的支持，您的网就是您的网，您的网您说了算.</p>
+                        <span>(855) 503-0450</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>  
+
 <!--services-->
+<!--
 <div class="services-bottom">
 	<p>为什么选择我们<span>不需要太多语言</span>我想您已经懂了</p>
 </div>
+-->
 <!--/srvices-->
 <!-- #Footer -->
 		<footer>
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6">
-						<span class="title">Latest Tweets</span>
-						<p>Lorem ipsum dolor sit amet, <span class="greenText">#tweetTag</span> consectetur adipiscing elit. Ut vel pharetra diam. Aenean convallis nibh facilisis risus convallis, non ornare tellus vehicula.<span class="tweetTime">10 Minutes Ago</span></p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel pharetra diam. Aenean convallis nibh facilisis risus convallis, non ornare tellus vehicula.<span class="tweetTime">1 Hour Ago</span></p>
-					</div>
+					
 					<div class="col-md-2 col-xs-6 col-sm-4">
 						<ul class="footerMenu">
-							<li class="title">What we do</li>
+							<li class="title">常用信息</li>
 							<li><a href="#">Plans</a></li>
 							<li><a href="#">Overview</a></li>
 							<li><a href="#">Features Tour</a></li>
@@ -289,7 +215,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="col-md-2 col-xs-6 col-sm-4">
 						<ul class="footerMenu">
-							<li class="title">Services</li>
+							<li class="title">技术服务</li>
 							<li><a href="#">Virtual Private Servers</a></li>
 							<li><a href="#">Dedicated Servers</a></li>
 							<li><a href="#">cloud vps</a></li>
@@ -299,7 +225,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="col-md-2 col-xs-6 col-sm-4">
 						<ul class="footerAddress">
-							<li class="title">Contact Us</li>
+							<li class="title">联系我们</li>
 							<li><strong>Address:</li>
 							<li>p. Palace, Bangalore Palace Road, India, LP4 2P8</li>
 							<li><strong>Phone:</strong></li>
